--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,10 +1,13 @@
 pandas==2.1.4
 numpy==1.25.2
 requests==2.31.0
-sqlalchemy==2.0.23
+sqlalchemy==1.4.53
 psycopg2-binary==2.9.9
-openai==1.3.7
+openai==1.51.0
 ccxt==4.1.65
 python-binance==1.0.19
 loguru==0.7.2
 python-dotenv==1.0.0
+ta==0.10.2
+tensorflow==2.15.0
+scikit-learn==1.3.2
