--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -22,6 +20,7 @@ services:
   core-app:
     build: ./core-app
     environment:
+      - TZ=Europe/Istanbul
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - BINANCE_API_KEY=${BINANCE_API_KEY}
       - BINANCE_API_SECRET=${BINANCE_API_SECRET}
@@ -46,6 +45,7 @@ services:
     networks:
       - trade_network
     restart: unless-stopped
+    command: streamlit run src/dashboard.py --server.address 0.0.0.0 --server.port 8501
 
   freqtrade-spot:
     build: ./freqtrade
@@ -55,7 +55,7 @@ services:
     volumes:
       - ./freqtrade/user_data:/freqtrade/user_data
       - freqtrade_spot_data:/freqtrade/user_data/data
-    command: freqtrade trade --config /freqtrade/user_data/configs/spot.json --dry-run
+    command: ["trade", "--config", "/freqtrade/user_data/configs/spot.json", "--strategy", "AI_Strategy", "--dry-run"]
     depends_on:
       - postgres
       - core-app
@@ -71,7 +71,7 @@ services:
     volumes:
       - ./freqtrade/user_data:/freqtrade/user_data
       - freqtrade_margin_data:/freqtrade/user_data/data
-    command: freqtrade trade --config /freqtrade/user_data/configs/margin.json --dry-run
+    command: ["trade", "--config", "/freqtrade/user_data/configs/margin.json", "--strategy", "AI_Strategy", "--dry-run"]
     depends_on:
       - postgres
       - core-app
@@ -87,7 +87,7 @@ services:
     volumes:
       - ./freqtrade/user_data:/freqtrade/user_data
       - freqtrade_futures_data:/freqtrade/user_data/data
-    command: freqtrade trade --config /freqtrade/user_data/configs/futures.json --dry-run
+    command: ["trade", "--config", "/freqtrade/user_data/configs/futures.json", "--strategy", "AI_Strategy", "--dry-run"]
     depends_on:
       - postgres
       - core-app
@@ -98,6 +98,7 @@ services:
   airflow-webserver:
     build: ./airflow
     environment:
+      - TZ=Europe/Istanbul
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER:-trade}:${POSTGRES_PASSWORD:-tradepass}@postgres/${POSTGRES_DB:-tradedb}
       - AIRFLOW__CORE__FERNET_KEY=Ua1QQ8qp-F8UWnLgqLQdAoJJFt5TLqcGH6HuH-DQS4Q=
@@ -118,6 +119,8 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
       - airflow_plugins:/opt/airflow/plugins
+      - ./core-app/src:/app/src:ro
+      - model_data:/app/models
     ports:
       - "8080:8080"
     depends_on:
@@ -134,6 +137,7 @@ services:
   airflow-scheduler:
     build: ./airflow
     environment:
+      - TZ=Europe/Istanbul
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER:-trade}:${POSTGRES_PASSWORD:-tradepass}@postgres/${POSTGRES_DB:-tradedb}
       - AIRFLOW__CORE__FERNET_KEY=Ua1QQ8qp-F8UWnLgqLQdAoJJFt5TLqcGH6HuH-DQS4Q=
@@ -148,6 +152,8 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
       - airflow_plugins:/opt/airflow/plugins
+      - ./core-app/src:/app/src:ro
+      - model_data:/app/models
     depends_on:
       postgres:
         condition: service_healthy
